--- a/Projects/xxdCmdb/web/templates/business_1_list.html
+++ b/Projects/xxdCmdb/web/templates/business_1_list.html
@@ -124,7 +124,8 @@
     <script>
         $(function () {
             $.initMenu('#menu_user_profile');
-            $.nbDataList('/user.html');
+            $.nbDataList('/business_1s.html');
+            $('#show_bussiness').removeAttr('style');
         });
 
 
