--- a/Projects/xxdCmdb/web/templates/layout/_layout.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layout.html
@@ -25,13 +25,14 @@
 {#            <span>用户管理</span>#}
 {#        </a>#}
         <a class="menu-item" href="#">
+            <i class="fa fa-cloud-upload" aria-hidden="true"></i>
+            <span>IDC管理</span>
+        </a>
+        <a class="menu-item" href="#">
             <i class="fa fa-free-code-camp" aria-hidden="true"></i>
             <span>业务管理</span>
         </a>
-{#        <a class="menu-item" href="#">#}
-{#            <i class="fa fa-cloud-upload" aria-hidden="true"></i>#}
-{#            <span>IDC管理</span>#}
-{#        </a>#}
+
 {#        <a class="menu-item" href="#">#}
 {#            <i class="fa fa-cubes" aria-hidden="true"></i>#}
 {#            <span>标签管理</span>#}
