--- a/Projects/xxdCmdb/web/templates/virtual_list.html
+++ b/Projects/xxdCmdb/web/templates/virtual_list.html
@@ -135,9 +135,8 @@
                     <td>内存</td>
                     <td>配置</td>
                     <td>宿主机</td>
-                    <td>业务</td>
                     <td>状态</td>
-                    <td>管理</td>
+{#                    <td>管理</td>#}
                     <td>操作</td>
                     <td>时间</td>
                 </tr>
@@ -146,21 +145,20 @@
                     <td>{{ forloop.counter }}</td>
                     <td>{{ item.host_ip }}</td>
                     <td>{{ item.host_name }}</td>
-                    <td>{{ item.cpu_num }}核</td>
-                    <td>{{ item.memory_num }}G</td>
-                    <td>{{ item.machine_type.machine_type }}</td>
-                    <td>{{ item.mudroom_host }}</td>
-                    <td>{{ item.bussiness }}</td>
+                    <td>{{ item.host_cpu }}核</td>
+                    <td>{{ item.host_memory }}G</td>
+                    <td>{{ item.get_host_item_display }}</td>
+                    <td>{{ item.host_machine }}</td>
                     <td>
                         <div class="progress progress-striped" style="margin-bottom: 0px";>
 	                        <div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%">100%</div>
                         </div>
                     </td>
-                    <td>
-                        <div class="progress progress-striped" style="margin-bottom: 0px";>
-                            <div class="progress-bar progress-bar-warning"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%; cursor: pointer;" onclick="host_manage({{ item.id }})">主机名</div>
-                        </div>
-                    </td>
+{#                    <td>#}
+{#                        <div class="progress progress-striped" style="margin-bottom: 0px";>#}
+{#                            <div class="progress-bar progress-bar-warning"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%; cursor: pointer;" onclick="host_manage({{ item.id }})">主机名</div>#}
+{#                        </div>#}
+{#                    </td>#}
                     <td>
                         <div class="progress progress-striped" style="margin-bottom: 0px";>
 	                        <div class="progress-bar progress-bar-danger"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%; cursor: pointer" onclick="host_del({{ item.id }})">删除</div>
@@ -212,7 +210,8 @@
                 $('#connect_info').addClass('alert-dismissable');
                 $('#connect_info').text('虚机部署任务发布成功！');
 
-                $("table tr:last td:eq(8)").children().children().attr('id', 'progress_show');
+                // 进度条选择显示列
+                $("table tr:last td:eq(7)").children().children().attr('id', 'progress_show');
                 setTimeout(function () {
                     var op = 0;
                     var tag = document.getElementById('progress_show');
