--- a/Projects/xxdCmdb/web/templates/asset_list.html
+++ b/Projects/xxdCmdb/web/templates/asset_list.html
@@ -99,7 +99,7 @@
         </button>
         <h4>确定删除资产？</h4>
 
-        <p>与该资产相关联的网卡、硬盘、内存和日志等将全部被删除！<br/> &nbsp;</p>
+        <p>与该资产相关联数据将全部被删除！<br/> &nbsp;</p>
 
         <p style="text-align: right">
             <button type="button" class="btn btn-danger" id="do_delete_confirm">确定删除</button>
