--- a/Projects/xxdCmdb/web/templates/include/header_menu.html
+++ b/Projects/xxdCmdb/web/templates/include/header_menu.html
@@ -17,7 +17,7 @@
             </a>
 
             <div class="more-info">
-                <a href="#" class="more-item">个人信息</a>
+{#                <a href="#" class="more-item">个人信息</a>#}
                 <a href="/logout.html" class="more-item">注销</a>
             </div>
         </div>
@@ -25,18 +25,23 @@
         <a class="user-menu right">
             消息
             <i class="fa fa-commenting-o" aria-hidden="true"></i>
-            <span class="badge bg-success">2</span>
+            <span class="badge bg-success">0</span>
         </a>
 
         <a class="user-menu right">
             通知
             <i class="fa fa-envelope-o" aria-hidden="true"></i>
-            <span class="badge bg-success">2</span>
+            <span class="badge bg-success">0</span>
         </a>
 
         <a class="user-menu right">
             任务
             <i class="fa fa-bell-o" aria-hidden="true"></i>
-            <span class="badge bg-danger">4</span>
+            <span class="badge bg-danger">0</span>
+        </a>
+        <a id="username_cookie" class="user-menu right">
+            admin
+{#            <i class="fa fa-bell-o" aria-hidden="true"></i>#}
+{#            <span class="badge bg-danger">4</span>#}
         </a>
     </div>
