--- a/Projects/xxdCmdb/web/templates/index.html
+++ b/Projects/xxdCmdb/web/templates/index.html
@@ -72,6 +72,18 @@
 
     </div>
 </div>
+    <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="/static/plugins/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/static/js/nb-list.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-1.12.4.js"></script>
 
+
+    <script>
+        $(function () {
+            $.initMenu('#menu_user_profile');
+            $.nbDataList('/business_1s.html', '1');
+        });
+
+    </script>
 </body>
 </html>
