--- a/Projects/xxdCmdb/web/templates/login.html
+++ b/Projects/xxdCmdb/web/templates/login.html
@@ -11,11 +11,11 @@
 
 <div class="login" style="margin-top:50px;">
     
-    <div class="header">
-        <div class="switch" id="switch"><a class="switch_btn_focus" id="switch_qlogin" href="javascript:void(0);" tabindex="7"></a>
+{#    <div class="header">#}
+{#        <div class="switch" id="switch"><a class="switch_btn_focus" id="switch_qlogin" href="javascript:void(0);" tabindex="7"></a>#}
 {#			<a class="switch_btn" id="switch_login" href="javascript:void(0);" tabindex="8">快速注册</a><div class="switch_bottom" id="switch_bottom" style="position: absolute; width: 64px; left: 0px;"></div>#}
-        </div>
-    </div>    
+{#        </div>#}
+{#    </div>    #}
   
     
     <div class="web_qr_login" id="web_qr_login" style="display: block; height: 235px;">    
