--- a/Projects/xxdCmdb/web/templates/include/header_menu.html
+++ b/Projects/xxdCmdb/web/templates/include/header_menu.html
@@ -13,7 +13,7 @@
 
         <div class="user-info right">
             <a href="#" class="avatar">
-                <img class="img-circle" src="/static/imgs/avatar/default.png">
+                <img style="height: 35px; width: 35px; margin-left: -17px" class="img-circle" src="/static/imgs/avatar/default.png">
             </a>
 
             <div class="more-info">
@@ -21,7 +21,9 @@
                 <a href="/logout.html" class="more-item">注销</a>
             </div>
         </div>
-
+        <a id="username_cookie" class="user-menu right">
+            登陆
+        </a>
         <a class="user-menu right">
             消息
             <i class="fa fa-commenting-o" aria-hidden="true"></i>
@@ -39,9 +41,5 @@
             <i class="fa fa-bell-o" aria-hidden="true"></i>
             <span class="badge bg-danger">0</span>
         </a>
-        <a id="username_cookie" class="user-menu right">
-            admin
-{#            <i class="fa fa-bell-o" aria-hidden="true"></i>#}
-{#            <span class="badge bg-danger">4</span>#}
-        </a>
+
     </div>
