--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -21,8 +21,11 @@
             <i class="fa fa-map-o" aria-hidden="true"></i>
             <span>资产查询</span>
         </a>
-        <ul class="tree" style="margin-left: -25px"></ul>
-
+        <a class="menu-item" href="/authorizer.html">
+            <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>权限查询</span>
+        </a>
+{#        <ul class="tree" style="margin-left: -25px"></ul>#}
     </div>
     <div class="content">
         {% block conent %} {% endblock %}
