--- a/Projects/xxdCmdb/web/templates/include/header.html
+++ b/Projects/xxdCmdb/web/templates/include/header.html
@@ -16,7 +16,7 @@
             <a href="/logout.html" class="more-item">注销</a>
         </div>
     </div>
-    <a id="username_cookie" class="user-menu right">
+    <a id="username_cookie" class="user-menu right" href="/login.html">
         登陆
     </a>
     <a class="user-menu right">
