--- a/Projects/xxdCmdb/web/templates/index.html
+++ b/Projects/xxdCmdb/web/templates/index.html
@@ -37,7 +37,7 @@
             <div class="info-box twitter-bg">
                 <i class="fa fa-connectdevelop"></i>
 
-                <div class="count">堡垒机</div>
+                <a class="count" href="/authorize.html">堡垒机</a>
                 <div class="title">Bastion</div>
             </div>
         </div>
