--- a/Projects/xxdCmdb/web/templates/auth_list.html
+++ b/Projects/xxdCmdb/web/templates/auth_list.html
@@ -13,38 +13,38 @@
     <div style="padding: 5px 8px;">
 
         <div class="list-block">
-{#            <div id="search_div" class="clearfix search-area">#}
-{##}
-{#                <div class="col-md-offset-10 do-submit">#}
-{#                    <a id="search_condition_submit" class="btn btn-primary no-radius">#}
-{#                        <i class="fa fa-search"></i> 搜索#}
-{#                    </a>#}
-{#                </div>#}
-{##}
-{#                <div id="search_conditions" class="col-md-offset-2 col-md-8">#}
-{#                    <div class="condition">#}
-{#                        <div class="icons">#}
-{#                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i#}
-{#                                    class="fa fa-plus-square"></i></a>#}
-{#                        </div>#}
-{#                        <div class="inputs">#}
-{#                            <div class="input-group">#}
-{#                                <div id="search_condition" init="false" class="input-group-btn">#}
-{#                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>#}
-{#                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>#}
-{#                                    <ul class="change-search-condition dropdown-menu">#}
-{##}
-{#                                    </ul>#}
-{#                                </div>#}
-{##}
-{##}
-{#                            </div>#}
-{##}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{##}
-{#            </div>#}
+            <div id="search_div" class="clearfix search-area">
+
+                <div class="col-md-offset-10 do-submit">
+                    <a id="search_condition_submit" class="btn btn-primary no-radius">
+                        <i class="fa fa-search"></i> 搜索
+                    </a>
+                </div>
+
+                <div id="search_conditions" class="col-md-offset-2 col-md-8">
+                    <div class="condition">
+                        <div class="icons">
+                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i
+                                    class="fa fa-plus-square"></i></a>
+                        </div>
+                        <div class="inputs">
+                            <div class="input-group">
+                                <div id="search_condition" init="false" class="input-group-btn">
+                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>
+                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                                    <ul class="change-search-condition dropdown-menu">
+
+                                    </ul>
+                                </div>
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
 {#            <div class="clearfix function-area">#}
 {#                <div class="btn-group btn-group-sm custom-btn-group">#}
@@ -64,7 +64,7 @@
 {#                       data-content=""></a>#}
 {#                </div>#}
 {#            </div>#}
-
+{#            <button onclick="do_aaa()">hhhh</button>#}
             <div class="table-responsive table-area">
                 <table class="table table-striped table-bordered">
                     <!-- 表格标题开始 -->
@@ -133,17 +133,11 @@
             $.initMenu('#menu_asset');
             $.nbDataList('/authorizes.html', '1');
 
-{#            $('#table_body').each(function () {#}
-{#                v = $(this).html();#}
-{#                alert(v);#}
-{#            });#}
-{#            var v = $("table_body tr:last td:eq(3)").text();#}
-{#            alert(v);#}
-
-
+            setTimeout("do_aaa()", 100);
         });
         function ChangePage(id) {
                 $.nbDataList('/authorizes.html', id);
+                setTimeout("do_aaa()", 100);
             }
         function do_pass(id) {
             $.ajax({
@@ -174,6 +168,22 @@
                 }
             }
             })
+        }
+        function do_aaa() {
+            $('#table_body').children().each(function () {
+                var v = $(this).children().next().next().next().next().next().next().next().next().html();
+                if(v == "[申请中]"){
+                    $(this).children().next().next().next().next().next().next().next().next().attr('style', 'display: inline-block; padding: 3px; background-color: rgb(240,173,87); margin-top:4px; margin-left:6px; margin-right:-20px');
+                    $(this).children().next().next().next().next().next().next().next().next().next().attr('style', '')
+                }else if(v == "[已通过]"){
+                    $(this).children().next().next().next().next().next().next().next().next().attr('style', 'display: inline-block; padding: 3px;background-color: rgb(92,184,92); margin-top:4px; margin-left:6px; margin-right:-20px');
+                    $(this).children().next().next().next().next().next().next().next().next().next().attr('style', '')
+                }else if(v == "[已拒绝]"){
+                    $(this).children().next().next().next().next().next().next().next().next().attr('style', 'display: inline-block; padding: 3px; background-color: rgb(217,83,79); margin-top:4px; margin-left:6px; margin-right:-20px');
+                    $(this).children().next().next().next().next().next().next().next().next().next().attr('style', '')
+                }else {
+                }
+            });
         }
     </script>
 {% endblock %}
