--- a/Projects/xxdCmdb/web/templates/auther_list.html
+++ b/Projects/xxdCmdb/web/templates/auther_list.html
@@ -132,10 +132,29 @@
         $(function () {
             $.initMenu('#menu_asset');
             $.nbDataList('/authorizers.html', '1');
+            setTimeout("do_aaa()", 100);
         });
         function ChangePage(id) {
                 $.nbDataList('/authorizers.html', id);
+                setTimeout("do_aaa()", 100);
             }
+
+        function do_aaa() {
+            $('#table_body').children().each(function () {
+                var v = $(this).children().next().next().next().next().next().next().html();
+                if(v == "[申请中]"){
+                    $(this).children().next().next().next().next().next().next().attr('style', 'display: inline-block; padding: 3px; background-color: rgb(240,173,87); margin-top:4px; margin-left:6px; margin-right:-20px');
+                    $(this).children().next().next().next().next().next().next().next().attr('style', '')
+                }else if(v == "[已通过]"){
+                    $(this).children().next().next().next().next().next().next().attr('style', 'display: inline-block; padding: 3px;background-color: rgb(92,184,92); margin-top:4px; margin-left:6px; margin-right:-20px');
+                    $(this).children().next().next().next().next().next().next().next().attr('style', '')
+                }else if(v == "[已拒绝]"){
+                    $(this).children().next().next().next().next().next().next().attr('style', 'display: inline-block; padding: 3px; background-color: rgb(217,83,79); margin-top:4px; margin-left:6px; margin-right:-20px');
+                    $(this).children().next().next().next().next().next().next().next().attr('style', '')
+                }else {
+                }
+            });
+        }
         function d_record(id) {
             $('#del_record').modal();
 
