--- a/Projects/xxdCmdb/web/templates/auther_list.html
+++ b/Projects/xxdCmdb/web/templates/auther_list.html
@@ -133,6 +133,8 @@
             $.initMenu('#menu_asset');
             $.nbDataList('/authorizers.html', '1');
             setTimeout("do_aaa()", 100);
+
+            $('#menu_search').addClass('active');
         });
         function ChangePage(id) {
                 $.nbDataList('/authorizers.html', id);
