--- a/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
@@ -21,9 +21,13 @@
             <i class="fa fa-connectdevelop" aria-hidden="true"></i>
             <span>资产管理</span>
         </a>
-        <a id="menu_asset" class="menu-item" href="/authorize.html">
-            <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
+        <a id="menu_auth" class="menu-item" href="/authorize.html">
+            <i class="fa fa-cogs" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
             <span>权限管理</span>
+        </a>
+        <a id="menu_user_profile" class="menu-item" href="/users.html">
+            <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
+            <span>用户管理</span>
         </a>
         <a class="menu-item" href="/read.html">
             <i class="fa fa-map-o" aria-hidden="true"></i>
