--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -17,11 +17,11 @@
 </div>
 <div class="pg-body">
     <div class="menu">
-        <a class="menu-item" href="/read.html">
+        <a id="menu_item" class="menu-item" href="/read.html">
             <i class="fa fa-map-o" aria-hidden="true"></i>
             <span>资产查询</span>
         </a>
-        <a class="menu-item" href="/authorizer.html">
+        <a id="menu_search" class="menu-item" href="/authorizer.html">
             <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>权限查询</span>
         </a>
