--- a/Projects/xxdCmdb/web/templates/read_list.html
+++ b/Projects/xxdCmdb/web/templates/read_list.html
@@ -109,6 +109,9 @@
         $(function () {
             $.initMenu('#menu_asset');
             $.nbDataList('/reads.html');
+
+            $('#menu_item').addClass('active');
+{#            $('#menu_auth').addClass('active');#}
         });
         function ChangePage(id) {
                 $.nbDataList('/reads.html', id);
