--- a/Projects/xxdCmdb/web/templates/groups_list.html
+++ b/Projects/xxdCmdb/web/templates/groups_list.html
@@ -12,38 +12,38 @@
     <div style="padding: 5px 8px;">
 
         <div class="list-block">
-            <div class="clearfix search-area">
-
-                <div class="col-md-offset-10 do-submit">
-                    <a id="search_condition_submit" class="btn btn-primary no-radius">
-                        <i class="fa fa-search"></i> 搜索
-                    </a>
-                </div>
-
-                <div id="search_conditions" class="col-md-offset-2 col-md-8">
-                    <div class="condition">
-                        <div class="icons">
-                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i
-                                    class="fa fa-plus-square"></i></a>
-                        </div>
-                        <div class="inputs">
-                            <div class="input-group">
-                                <div id="search_condition" init="false" class="input-group-btn">
-                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>
-                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
-                                    <ul class="change-search-condition dropdown-menu">
-
-                                    </ul>
-                                </div>
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+{#            <div class="clearfix search-area">#}
+{##}
+{#                <div class="col-md-offset-10 do-submit">#}
+{#                    <a id="search_condition_submit" class="btn btn-primary no-radius">#}
+{#                        <i class="fa fa-search"></i> 搜索#}
+{#                    </a>#}
+{#                </div>#}
+{##}
+{#                <div id="search_conditions" class="col-md-offset-2 col-md-8">#}
+{#                    <div class="condition">#}
+{#                        <div class="icons">#}
+{#                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i#}
+{#                                    class="fa fa-plus-square"></i></a>#}
+{#                        </div>#}
+{#                        <div class="inputs">#}
+{#                            <div class="input-group">#}
+{#                                <div id="search_condition" init="false" class="input-group-btn">#}
+{#                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>#}
+{#                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>#}
+{#                                    <ul class="change-search-condition dropdown-menu">#}
+{##}
+{#                                    </ul>#}
+{#                                </div>#}
+{##}
+{##}
+{#                            </div>#}
+{##}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{##}
+{#            </div>#}
 
 {#            <div class="clearfix function-area">#}
 {#                <div class="btn-group btn-group-sm custom-btn-group">#}
@@ -99,17 +99,17 @@
                         <td>{{ obj.name }}</td>
                         <td>
                             {% for host in obj.business_one.all %}
-                                <span style="display: inline-block; padding: 3px; background-color: rgb(92,184,92) " hid="{{ host.id }}">{{ host.name }}</span>
+                                <span style="display: inline-block; padding: 3px; background-color: rgb(92,184,92);border-radius: 3px;" hid="{{ host.id }}">{{ host.name }}</span>
                             {% endfor %}
                         </td>
                         <td>
                             {% for host in obj.business_two.all %}
-                                <span style="display: inline-block; padding: 3px; background-color: rgb(92,184,92) " hid="{{ host.id }}">{{ host.name }}</span>
+                                <span style="display: inline-block; padding: 3px;background-color: rgb(92,184,92);border-radius: 3px;" hid="{{ host.id }}">{{ host.name }}</span>
                             {% endfor %}
                         </td>
                         <td>
                             {% for host in obj.business_three.all %}
-                                <span style="display: inline-block; padding: 3px; background-color: rgb(92,184,92) " hid="{{ host.id }}">{{ host.name }}</span>
+                                <span style="display: inline-block; padding: 3px;background-color: rgb(92,184,92);border-radius: 3px;" hid="{{ host.id }}">{{ host.name }}</span>
                             {% endfor %}
                         </td>
                         <td>
@@ -215,7 +215,7 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_user_profile');
+            $.initMenu('#menu_group_profile');
             $.nbDataList('/groups.html');
         });
         function edit_group(ths, nid) {
@@ -243,28 +243,7 @@
             });
             $('#business_3').selectpicker('val', business_three_list);
 
-
-
-{#            $('#app_name').text($(ths).parent().prev().prev().val());#}
-{#            u = '/details_app-' + nid + '.html/';#}
-{#            $.ajax({#}
-{#                url: u,#}
-{#                type: 'POST',#}
-{#                dataType: 'JSON',#}
-{#                data: {'name': '1'},#}
-{#                success: function (data_dict) {#}
-{#                    if(data_dict){#}
-{#                        $('#ap_name').val(data_dict.name)#}
-{#                    }#}
-{#                }#}
-{#            });#}
-
             $('#save_edit').click(function () {
-{#                if($('#ap_name').val()=="" || $('#business_1').selectpicker('val')==null || $('#business_2').selectpicker('val')==null#}
-{#                    || $('#business_3').selectpicker('val')==null){#}
-{#                    alert('用户名或者选择不能为空！');#}
-{#                    return false;#}
-{#                }#}
                 $.ajax({
                     url : '/groups.html',
                     type: 'POST',
