--- a/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
@@ -25,9 +25,13 @@
             <i class="fa fa-cogs" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
             <span>权限管理</span>
         </a>
-        <a id="menu_user_profile" class="menu-item" href="/users.html">
+        <a id="menu_user_profile" class="menu-item" href="/user.html">
             <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
             <span>用户管理</span>
+        </a>
+        <a id="menu_group_profile" class="menu-item" href="/group.html">
+            <i class="fa fa-users" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
+            <span>群组管理</span>
         </a>
         <a class="menu-item" href="/read.html">
             <i class="fa fa-map-o" aria-hidden="true"></i>
