--- a/Projects/xxdCmdb/web/templates/users_list.html
+++ b/Projects/xxdCmdb/web/templates/users_list.html
@@ -1,8 +1,7 @@
 {% extends 'layout/_laybusiness.html' %}
 
 {% block css %}
-
-
+    <link rel="stylesheet" href="/static/css/bootstrap-select.css">
 {% endblock %}
 
 {% block conent %}
@@ -13,62 +12,62 @@
     <div style="padding: 5px 8px;">
 
         <div class="list-block">
-            <div class="clearfix search-area">
+{#            <div class="clearfix search-area">#}
+{##}
+{#                <div class="col-md-offset-10 do-submit">#}
+{#                    <a id="search_condition_submit" class="btn btn-primary no-radius">#}
+{#                        <i class="fa fa-search"></i> 搜索#}
+{#                    </a>#}
+{#                </div>#}
+{##}
+{#                <div id="search_conditions" class="col-md-offset-2 col-md-8">#}
+{#                    <div class="condition">#}
+{#                        <div class="icons">#}
+{#                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i#}
+{#                                    class="fa fa-plus-square"></i></a>#}
+{#                        </div>#}
+{#                        <div class="inputs">#}
+{#                            <div class="input-group">#}
+{#                                <div id="search_condition" init="false" class="input-group-btn">#}
+{#                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>#}
+{#                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>#}
+{#                                    <ul class="change-search-condition dropdown-menu">#}
+{##}
+{#                                    </ul>#}
+{#                                </div>#}
+{##}
+{##}
+{#                            </div>#}
+{##}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{##}
+{#            </div>#}
 
-                <div class="col-md-offset-10 do-submit">
-                    <a id="search_condition_submit" class="btn btn-primary no-radius">
-                        <i class="fa fa-search"></i> 搜索
-                    </a>
-                </div>
-
-                <div id="search_conditions" class="col-md-offset-2 col-md-8">
-                    <div class="condition">
-                        <div class="icons">
-                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i
-                                    class="fa fa-plus-square"></i></a>
-                        </div>
-                        <div class="inputs">
-                            <div class="input-group">
-                                <div id="search_condition" init="false" class="input-group-btn">
-                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>
-                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
-                                    <ul class="change-search-condition dropdown-menu">
-
-                                    </ul>
-                                </div>
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="clearfix function-area">
-                <div class="btn-group btn-group-sm custom-btn-group">
-                    <a id="check_all" class="btn btn-default no-radius"><i
-                            class="fa fa-check-square"></i> 全选</a>
-                    <a id="check_cancel" class="btn btn-default no-radius"><i class="fa fa-minus-square-o"></i> 取消</a>
-                    <a id="check_reverse" class="btn btn-default no-radius"><i
-                            class="fa fa-check-square-o"></i> 反选</a>
-                    <a class="btn btn-default no-radius" href="#"><i class="fa fa-plus-circle"></i>添加</a>
-                    <a id="do_delete" class="btn btn-default no-radius"><i class="fa fa-trash"></i> 删除</a>
-                    <a id="edit_mode_target" class="btn btn-default no-radius"><i class="fa fa-pencil-square-o"></i>
-                        <span>进入编辑模式</span></a>
-                    <a id="do_save" class="btn btn-default no-radius"><i class="fa fa-floppy-o"></i> 保存</a>
-                    <a id="do_refresh" class="btn btn-default no-radius"><i class="fa fa-refresh"></i> 刷新</a>
-                    <a id="handle_status" class="btn no-radius" tabindex="0" role="button" data-toggle="manual"
-                       data-trigger="focus" data-container="body" data-html="true" data-placement="bottom" title="错误详细"
-                       data-content=""></a>
-                </div>
-            </div>
+{#            <div class="clearfix function-area">#}
+{#                <div class="btn-group btn-group-sm custom-btn-group">#}
+{#                    <a id="check_all" class="btn btn-default no-radius"><i#}
+{#                            class="fa fa-check-square"></i> 全选</a>#}
+{#                    <a id="check_cancel" class="btn btn-default no-radius"><i class="fa fa-minus-square-o"></i> 取消</a>#}
+{#                    <a id="check_reverse" class="btn btn-default no-radius"><i#}
+{#                            class="fa fa-check-square-o"></i> 反选</a>#}
+{#                    <a class="btn btn-default no-radius" href="#"><i class="fa fa-plus-circle"></i>添加</a>#}
+{#                    <a id="do_delete" class="btn btn-default no-radius"><i class="fa fa-trash"></i> 删除</a>#}
+{#                    <a id="edit_mode_target" class="btn btn-default no-radius"><i class="fa fa-pencil-square-o"></i>#}
+{#                        <span>进入编辑模式</span></a>#}
+{#                    <a id="do_save" class="btn btn-default no-radius"><i class="fa fa-floppy-o"></i> 保存</a>#}
+{#                    <a id="do_refresh" class="btn btn-default no-radius"><i class="fa fa-refresh"></i> 刷新</a>#}
+{#                    <a id="handle_status" class="btn no-radius" tabindex="0" role="button" data-toggle="manual"#}
+{#                       data-trigger="focus" data-container="body" data-html="true" data-placement="bottom" title="错误详细"#}
+{#                       data-content=""></a>#}
+{#                </div>#}
+{#            </div>#}
 
             <div class="table-responsive table-area">
-                <table class="table table-striped table-bordered">
+                <table class="table table-striped table-bordered" style="display: none" >
                     <!-- 表格标题开始 -->
-                    <thead id="table_head">
+                    <thead id="table_head" style="display: none">
                     <tr>
 
                     </tr>
@@ -76,12 +75,55 @@
                     <!-- 表格标题结束 -->
 
                     <!-- 表格内容开始 -->
-                    <tbody id="table_body" edit-mode='false'>
-
-                    </tbody>
+{#                    <tbody id="table_body" edit-mode='false'>#}
+{##}
+{#                    </tbody>#}
                     <!-- 表格内容结束 -->
 
                 </table>
+
+                <table class="table table-striped table-bordered">
+                    <thead id="table_head">
+                    <tr>
+                        <th>序号</th>
+                        <th>用户名</th>
+                        <th>用户组</th>
+                        <th>环境</th>
+                        <th>业务2</th>
+                        <th>业务3</th>
+                        <th>操作</th>
+                    </tr>
+                    </thead>
+                {% for obj in user_list %}
+                    <tr>
+                        <th>{{ forloop.counter }}</th>
+                        <td>
+                            {{ obj.name }}
+                        </td>
+                        <td><div style="display: inline-block; padding: 3px;background-color: rgb(240,172,81); border-radius: 3px">{{ obj.group }}</div></td>
+                        <td>
+                            {% for host in obj.business_one.all %}
+                                <span style="display: inline-block; padding: 3px;background-color: rgb(92,184,92); border-radius: 3px; " hid="{{ host.id }}">{{ host.name }}</span>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            {% for host in obj.business_two.all %}
+                                <span style="display: inline-block; padding: 3px;background-color: rgb(92,184,92);border-radius: 3px;" hid="{{ host.id }}">{{ host.name }}</span>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            {% for host in obj.business_three.all %}
+                                <span style="display: inline-block; padding: 3px;background-color: rgb(92,184,92);border-radius: 3px; " hid="{{ host.id }}">{{ host.name }}</span>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            <a href="#" onclick="edit_user(this, {{ obj.id }})">编辑</a> |
+                            <a href="#" onclick="del_user({{ obj.id }})">删除</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </table>
+
                 <div class="clearfix">
                     <div class="right">
                         <ul id="pager" class="pagination pagination-sm no-margin">
@@ -91,6 +133,63 @@
             </div>
         </div>
 
+    </div>
+
+    <!-- 编辑应用 模态对话框 -->
+    <div class="modal fade" id="edit_example" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="exampleModalLabel">编辑权限</h4>
+          </div>
+          <form id="form1">
+          <div class="modal-body">
+              <div class="form-group">
+                <label for="recipient-name" class="control-label">用户组</label>
+                <br>
+                  <select id="groups" class="selectpicker">
+                      {% for item in group_list %}
+                      <option id="recipient-name23" value={{ item.id }}>{{ item.name }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+              <div class="form-group">
+                <label for="recipient-name" class="control-label">选择环境</label>
+                <br>
+                  <select id="business_1" class="selectpicker" multiple>
+                      {% for item in business_one_list %}
+                      <option id="recipient-name23" value={{ item.id }}>{{ item.name }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+              <div class="form-group">
+                <label for="recipient-name" class="control-label">选择业务线2</label>
+                <br>
+                  <select id="business_2" class="selectpicker" multiple>
+                      {% for item in business_two_list %}
+                      <option id="recipient-name23" value={{ item.id }}>{{ item.name }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+              <div class="form-group">
+                <label for="recipient-name" class="control-label">选择业务线3</label>
+                <br>
+                  <select id="business_3" class="selectpicker" multiple>
+                      {% for item in business_three_list %}
+                      <option id="recipient-name23" value={{ item.id }}>{{ item.name }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+          </div>
+          <div class="modal-footer">
+              <span id="add_error_02" style="color: red;"></span>
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button id="save_edit" type="button" class="btn btn-primary">保存</button>
+          </div>
+        </form>
+        </div>
+      </div>
     </div>
 
     <!-- 删除层开始 -->
@@ -120,11 +219,55 @@
     <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
     <script type="text/javascript" src="/static/plugins/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="/static/js/nb-list.js"></script>
+    <script src="/static/js/bootstrap-select.js"></script>
 
     <script>
         $(function () {
             $.initMenu('#menu_user_profile');
             $.nbDataList('/user.html');
         });
+        function edit_user(ths, nid) {
+            $('#edit_example').modal();
+
+            <!-- 获取原环境列表 -->
+            var business_one_list = [];
+            var business_two_list = [];
+            var business_three_list = [];
+            $(ths).parent().prev().prev().prev().children().each(function () {
+                var v = $(this).attr('hid');
+                business_one_list.push(v);
+            });
+            $('#business_1').selectpicker('val', business_one_list);
+            var group_name = $(ths).parents().prev().prev().prev().prev().text();
+            $('#ap_name').val(group_name);
+            $(ths).parent().prev().prev().children().each(function () {
+                var v = $(this).attr('hid');
+                business_two_list.push(v);
+            });
+            $('#business_2').selectpicker('val', business_two_list);
+            $(ths).parent().prev().children().each(function () {
+                var v = $(this).attr('hid');
+                business_three_list.push(v);
+            });
+            $('#business_3').selectpicker('val', business_three_list);
+
+            $('#save_edit').click(function () {
+                $.ajax({
+                    url : '/users.html',
+                    type: 'POST',
+                    dataType: 'JSON',
+                    traditional: true,
+                    data: {'group_name': $('#groups').val(), 'nid': nid, 'business_1_list': $('#business_1').selectpicker('val')
+                    , 'business_2_list': $('#business_2').selectpicker('val'), 'business_3_list': $('#business_3').selectpicker('val')},
+                    success: function (data_dict) {
+                        if(data_dict.status){
+                            location.reload();
+                        }else {
+                            $('#add_error_02').text(data_dict.message)
+                        }
+                    }
+                })
+            })
+        }
     </script>
 {% endblock %}
